--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
 <body>
     <center>
     <h1>MI PAGINA</h1>
+    <br>
+    <label>Nombre: </label>
+    <input type="text" />
+
+    <input type="submit" value="Buscar"/>
+    <br/>
+/* tr equivale a filas y td equivale a columnas/*
+    <table>
+        <tr> 
+            <th>Nombre</th>
+            <th>Apellido</th>
+        </tr>
+        <tr>
+            <td>Juan</td> 
+            <td>Perez</td>
+        </tr>
+        <tr>
+            <td>Ana</td>
+            <td>Gomez</td>
+        </tr>
+        <tr>
+            <td>Carlos</td>
+            <td>Lopez</td>
+            <td>28</td>
+        </tr>
+    </table>
     </center>
    
 </body>
